[gd_scene load_steps=3 format=3 uid="uid://duyxluc3ja031"]

[ext_resource type="Theme" uid="uid://yxekjv7f7m0g" path="res://themes/editor-theme.tres" id="1_38p7f"]
[ext_resource type="Script" uid="uid://gk6a0hyjl081" path="res://editors/common/editor_panel/content_manager.gd" id="2_ifgyv"]

[node name="EditorPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_38p7f")
script = ExtResource("2_ifgyv")
title = "EditorPanel"

[node name="TopVBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_38p7f")
theme_type_variation = &"TopVBox"

[node name="TopLabel" type="Label" parent="TopVBox"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_38p7f")
theme_type_variation = &"TopLabel"
text = "EditorPanel"

[node name="ScrollContainer" type="ScrollContainer" parent="TopVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentsVBox" type="VBoxContainer" parent="TopVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
